	compiler nag relative which KISS macro triggers
	(rexp): Added, using inline kiss()
	(efix): Added as well supporting rexp()
	(init): Also initialize tables for exponential RNG

	* src/ziggurat.cpp (zrexp): Added, calling rexp()
	* man/ziggurat.Rd: Add alias for zrexp()
	* src/RcppExports.cpp: Regenerated
	* R/RcppExports.R: Idem

2024-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* R/standardTest.R (.safeMaxCores): New helper function to provide
	value of 'mc.cores' if set, else 1 on Windows and 2 everywhere else
	* R/standardTest.R (standardTest): Use .safeMaxCores()
	* R/normalTest.R (normalTest): Idem
	* R/chisqTest.R (chisqTest): Idem

2024-10-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-07-18  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Switch some URLs from http to https

2024-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2022-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2021-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-10-13  Dirk Eddelbuettel  <edd@debian.org>

	* man/ziggurat.Rd: Refinement of doi use in Rd file
 	* man/RcppZiggurat-package.Rd: Idem

2021-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* man/ziggurat.Rd: Change JSS url to use doi per JSS requent
 	* man/RcppZiggurat-package.Rd: Idem

2021-07-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

2021-06-23  Jeroen Ooms  <jeroenooms@gmail.com>

	* tools/winlibs.R: Update to GSL 2.7 and support UCRT build
	* src/Makevars.win: Update to GSL 2.7
	* src/Makevars.ucrt: Support UCRT build

2021-05-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Added links

2021-01-14  Dirk Eddelbuettel  <edd@debian.org>
